Name:                hyperdrive
Version:             0.5.0
Synopsis:            a fast, trustworthy HTTP(s) server built
Description:         hyperdrive aims to provide an HTTP server which is not only
                     extremely fast, but also provides a high-level of proof that
                     its implementation is correct.
                     .
                     hyperdrive is still in alpha and not at all suitable for
                     use. The current implementation is relatively fast, but does
                     not yet use any of the techniques for proof-of-correctness. It
                     also does not implement many essential features yet.
License:             BSD3
License-file:        LICENSE
Author:              Jeremy Shaw
Maintainer:          jeremy@n-heptane.com
Copyright:           2012 Jeremy Shaw
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.6

source-repository head
    type:     git
    location: https://github.com/stepcut/hyperdrive.git

Library
  Exposed-modules:   Hyperdrive.Serve
                     Hyperdrive.Simple
                     Hyperdrive.Types
  Build-depends:     base                  > 4.2    && <5,
                     attoparsec            >= 0.11  && < 0.12,
                     bytestring            >= 0.10  && < 0.11,
                     case-insensitive      >= 1.1   && < 1.2,
                     http-types            >= 0.8   && < 0.9,
                     lens-family-core      >= 1.0   && < 1.1,
                     mtl                   >= 2.1   && < 2.2,
                     network               >= 2.4   && < 2.5,
                     network-simple        >= 0.3   && < 0.4,
                     pipes                 >= 4.0   && < 4.2,
                     pipes-attoparsec      >= 0.4   && < 0.5,
                     pipes-bytestring      >= 2.0   && < 2.1,
                     pipes-parse           >= 3.0   && < 3.1,
                     pipes-network         >= 0.6.2 && < 0.7,
                     pipes-safe            >= 2.0.2 && < 2.1,
                     text                  >= 0.11  && < 1.2
  GHC-Options: -O2

Executable pong
  Main-Is: Pong.hs
  GHC-Options: -threaded -O2 -rtsopts
  Buildable: False

benchmark hyperdrive-benchmark
  type:              exitcode-stdio-1.0
  Hs-source-dirs:    bench .
  Main-is:           Criterion.hs
  build-depends:     criterion
  GHC-Options:       -threaded -O2


Test-Suite hyperdrive-test
  type:              detailed-0.9
  test-module:       Test.Hyperdrive
  build-depends:     base,
                     Cabal >= 1.9.2
