name:                hyperdrive-core
version:             0.1.0.0
synopsis:            core types used by the hyperdrive HTTP server
homepage:            https://github.com/stepcut/hyperdrive
license:             BSD3
license-file:        LICENSE
author:              Jeremy Shaw
maintainer:          jeremy@n-heptane.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Hyperdrive.Types
  other-extensions:    DeriveDataTypeable, DeriveGeneric, StandaloneDeriving, TemplateHaskell, OverloadedStrings
  build-depends:       base        >= 4.7  && < 4.8,
                       pipes       >= 4.1  && < 4.2,
                       pipes-parse >= 3.0  && < 3.1,
                       bytestring  >= 0.10 && < 0.11,
                       text        >= 1.2  && < 1.3,
                       http-types  >= 0.8  && < 0.9,
                       network     >= 2.6  && < 2.7
  default-language:    Haskell2010