name:                hyperdrive-parser-abnf
version:             0.1.0.1
synopsis:            A parser for hyperdrive which is machine checked against the ABNF spec
homepage:            https://github.com/stepcut/hyperdrive
license:             BSD3
license-file:        LICENSE
author:              Jeremy Shaw
maintainer:          jeremy@n-heptane.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Hyperdrive.Parser.ABNF.Attoparsec
                       Hyperdrive.Parser.ABNF.Parser
  other-extensions:    TemplateHaskell, OverloadedStrings, QuasiQuotes
  build-depends:       base                  >= 4.7  && < 4.12,
                       abnf                  >= 0.1  && < 0.5,
                       abnf-parser-generator >= 0.1  && < 0.2,
                       attoparsec            >= 0.12 && < 0.14,
                       bytestring            >= 0.10 && < 0.11,
                       case-insensitive      >= 1.2  && < 1.3,
                       containers            >= 0.5  && < 0.7,
                       hyperdrive-core       >= 0.1  && < 0.2,
                       http-types            >= 0.8  && < 0.13,
                       mtl                   >= 2.1  && < 2.3,
                       network               >= 2.6  && < 2.9,
                       template-haskell      >= 2.9  && < 2.14,
                       text                  >= 1.2  && < 1.3,
                       th-lift               >= 0.6  && < 0.8,
                       th-lift-instances     >= 0.1  && < 0.2
  default-language:    Haskell2010